fix: change alignment in info-block2

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -187,10 +187,11 @@ body {
     font-weight: normal;  
 }
 .info-block2 {
+    // display: flex;
     height: 363px;
     ul{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;     
         height: 100%;  
     }
@@ -203,14 +204,17 @@ body {
 }
 .info-block2__text {
     width: 270px;
+    height: 200px;
 }
 .info-block2__caption {
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 26px;
     color: rgb(113, 106, 114);
     font-weight: bold;
     border-bottom: 1px solid #e4e4e4;
-    padding-bottom: 28px;
+    padding-bottom: 31px;
+    line-height: 0.6;
+    letter-spacing: normal;
 }
 .info-block2__description {
     color: rgb(157, 157, 157);
@@ -219,7 +223,7 @@ body {
     letter-spacing: normal;
     line-height: 1.6;
     hyphens: auto;
-    margin-top: 33px;
+    margin-top: 22px;
 }
 .info-block2__icon-circle {
     background: #ffffff;
@@ -254,8 +258,8 @@ body {
 
 .info-block2__button {
     @extend %button;    
-    margin-top: 33px;
-    letter-spacing: 0.175em;
+    margin-top: 27px;
+    letter-spacing: 0.1em;
     font-size: 16px;
     height: 32px;    
     width: 70px;
